gccida/c1/rtx_equal_for_cselib_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_equal_for_cselib_p/src/cselib.c:890:26: error: use of undeclared identifier 'machine_mode'
v5 = cselib_lookup( x, ( machine_mode)BYTE2( v4), 0); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_equal_for_cselib_p/src/cselib.c:897:26: error: use of undeclared identifier 'machine_mode'
v7 = cselib_lookup( y, ( machine_mode)BYTE2( v6), 0); 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_equal_for_cselib_p/src/obj/cselib.o] Error 1
